--- a/about.html
+++ b/about.html
@@ -149,7 +149,10 @@
 		<div class="b-block">
 			<h2 class="title">Формат обучения</h2>
 			<div class="b-3-wrap">
-				<img src="i/news-more-img.jpg">
+				<div class="b-3-img">
+					<img src="i/news-more-img.jpg">
+					<span>Освоение новой методики растяжки прошло успешно, дети наблюдают прогресс</span>
+				</div>
 				<p>Неоднократный призер чемпионатов Сибирского федерального округа, открытых чемпионатов Новосибирска, серебряный призер Национального чемпионата по бразильскому джиу джитсу среди российских клубов Gracia Barra.</p>
 				<div class="b-3-fix">
 					<div class="name">Хотите убедиться в качестве тренировок?</div>
