--- a/disciplines.html
+++ b/disciplines.html
@@ -160,7 +160,7 @@
 				<form>
 					<div class="select-wrap">
 						<div class="select-area">
-							<span></span>
+							<span>Выберите пол</span>
 						</div>
 						<div class="select-drop"></div>
 						<select>
@@ -170,7 +170,7 @@
 					</div>
 					<div class="select-wrap">
 						<div class="select-area">
-							<span></span>
+							<span>Сколько лет?</span>
 						</div>
 						<div class="select-drop"></div>
 						<select>
