--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
 	<div class="b header">
 		<div class="b-block">
 			<a href="index.html" class="header-logo"><img src="i/logo.png"></a>
+			<a href="index.html" class="header-small-logo"></a>
 			<div class="header-top clearfix">
 				<div class="header-slogan left">С нами становятся сильнее!</div>
 				<div class="header-right right">
 					<div class="header-city">Томск</div>
 					<ul class="header-social">
-						<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
-						<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
-						<li><a href="#" target="_blank"><img src="i/social-ico-2.svg"></a></li>
+						<li><a href="#" target="_blank" class="soc-1"><img src="i/social-ico-1.svg"></a></li>
+						<li><a href="#" target="_blank" class="soc-2"><img src="i/social-ico-2.svg"></a></li>
+						<li><a href="#" target="_blank" class="soc-3"><img src="i/social-ico-3.svg"></a></li>
 					</ul>
 					<a href="tel: 89230000000" class="header-phone">8 (923) 000-00-00</a>
 				</div>
@@ -111,8 +112,8 @@
 				<div class="header-city">Томск</div>
 				<ul class="header-social">
 					<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
-					<li><a href="#" target="_blank"><img src="i/social-ico-1.svg"></a></li>
 					<li><a href="#" target="_blank"><img src="i/social-ico-2.svg"></a></li>
+					<li><a href="#" target="_blank"><img src="i/social-ico-3.svg"></a></li>
 				</ul>
 				<a href="tel: 89230000000" class="header-phone">8 (923) 000-00-00</a>
 			</div>
@@ -125,7 +126,7 @@
 				<div class="b-block">
 					<h2>Запишите ребенка в детскую школу единоборств</h2>
 					<p>с профессиональным уклоном<br> обучения детей от 3 до 6 лет</p>
-					<a href="#popup-3" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
+					<a href="#popup-1" class="b-1-btn fancybox">Записаться на бесплатное занятие</a>
 				</div>
 			</div>
 			<div class="b-1-slide">
@@ -225,7 +226,7 @@
 				<form>
 					<div class="select-wrap">
 						<div class="select-area">
-							<span></span>
+							<span>Выберите пол</span>
 						</div>
 						<div class="select-drop"></div>
 						<select>
@@ -235,7 +236,7 @@
 					</div>
 					<div class="select-wrap">
 						<div class="select-area">
-							<span></span>
+							<span>Сколько лет?</span>
 						</div>
 						<div class="select-drop"></div>
 						<select>
@@ -375,7 +376,7 @@
 					ОГРН 4378-4843894-48484
 				</p>
 				<p>
-					<a href="#" target="_blank">Политика конфиденциальности</a><br>
+					<a href="policy.html" target="_blank">Политика конфиденциальности</a><br>
 					<a href="#" target="_blank">Политика персональных данных</a>
 				</p>
 			</div>
@@ -439,7 +440,7 @@
 			<form>
 				<div class="select-wrap">
 					<div class="select-area">
-						<span></span>
+						<span>Выберите пол</span>
 					</div>
 					<div class="select-drop"></div>
 					<select>
@@ -449,7 +450,7 @@
 				</div>
 				<div class="select-wrap">
 					<div class="select-area">
-						<span></span>
+						<span>Сколько лет?</span>
 					</div>
 					<div class="select-drop"></div>
 					<select>
