--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 							<div class="drop-item"><a href="about.html">О школе</a></div>
 							<div class="drop-item"><a href="treners.html">Тренеры</a></div>
 							<div class="drop-item"><a href="achives.html">Достижения</a></div>
-							<div class="drop-item"><a href="#">Фотогалерея</a></div>
-							<div class="drop-item"><a href="#">Видео</a></div>
+							<div class="drop-item"><a href="photo-gallery.html">Фотогалерея</a></div>
+							<div class="drop-item"><a href="video-gallery.html">Видео</a></div>
 							<div class="drop-item"><a href="schedule.html">Расписание</a></div>
 							<div class="drop-item"><a href="#">Вакансии</a></div>
 							<div class="drop-item"><a href="#">Методика</a></div>
